--- a/src/index.css
+++ b/src/index.css
@@ -88,3 +88,21 @@ width: 100%;
 .tox {
   position: fixed;
 }
+.itemZones {
+  padding: 0.5rem 0.5rem;
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  position: relative;
+  border: 1px solid #c0c0c0;
+  border-radius: 0.5rem;
+}
+
+.zoneAddButton {
+  display: flex;
+  flex-direction: row;
+  margin-left: 1rem;
+  margin-bottom: 1rem;
+}
