--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,43 @@ table#tableid {
    width: 100%;
    background-color: transparent; 
 }
+body {
+   /* background-image: url(https://img.freepik.com/free-vector/gradient-blur-pink-blue-abstract-background_53876-117324.jpg?w=1380&t=st=1701093583~exp=1701094183~hmac=2f93a5fd5ddef6589c479dbdcbd2e8a22adb2a9af8706a374ecbd56721c87781);
+   background-repeat: no-repeat;
+   background-position: center;
+   background-size: cover; */
+
+   /* width: 100%;
+  height: 100vh; */
+  /* display: flex; */
+  align-items: center;
+  justify-content: center;
+  background-size: 300% 300%;
+  background-image: linear-gradient(-45deg, rgb(0, 225, 255) 0%, rgb(0, 225, 255) 25%, rgb(0, 225, 255) 51%, #ff3557 100%);
+  -webkit-animation: AnimateBG 40s ease infinite;
+          animation: AnimateBG 40s ease infinite;
+}
+
+@-webkit-keyframes AnimateBG {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes AnimateBG {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
