--- a/src/index.css
+++ b/src/index.css
@@ -115,3 +115,46 @@ width: 100%;
   margin-left: 1rem;
   margin-bottom: 1rem;
 }
+
+.banner {
+  width: 70px;
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  background-color: #3498db;
+  color: #fff;
+  padding: 10px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.content p {
+  margin: 0;
+  font-size: 14px;
+}
+
+.content img {
+  width: 50px;
+  height: auto;
+  margin-top: 5px;
+}
+
+button {
+  background: none;
+  border: none;
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+button:focus {
+  outline: none;
+}
