--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,21 @@ body {
   justify-content: center;
   background-size: 300% 300%;
   background-image: linear-gradient(-45deg, rgb(0, 225, 255) 0%, rgb(0, 225, 255) 25%, rgb(0, 225, 255) 51%, #ff3557 100%);
-  -webkit-animation: AnimateBG 40s ease infinite;
-          animation: AnimateBG 40s ease infinite;
+  -webkit-animation: AnimateBG 30s ease infinite;
+          animation: AnimateBG 30s ease infinite;
 }
-
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background-image: url(https://grainy-gradients.vercel.app/noise.svg); */
+  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.dev/svgjs" viewBox="0 0 700 700" width="700" height="700" opacity="1"><defs><filter id="nnnoise-filter" x="-20%" y="-20%" width="140%" height="140%" filterUnits="objectBoundingBox" primitiveUnits="userSpaceOnUse" color-interpolation-filters="linearRGB"><feTurbulence type="fractalNoise" baseFrequency="0.2" numOctaves="4" seed="15" stitchTiles="stitch" x="0%" y="0%" width="100%" height="100%" result="turbulence"></feTurbulence><feSpecularLighting surfaceScale="13" specularConstant="0.8" specularExponent="20" lighting-color="%23dae08f" x="0%" y="0%" width="100%" height="100%" in="turbulence" result="specularLighting"><feDistantLight azimuth="3" elevation="131"></feDistantLight></feSpecularLighting><feColorMatrix type="saturate" values="0" x="0%" y="0%" width="100%" height="100%" in="specularLighting" result="colormatrix"></feColorMatrix></filter></defs><rect width="700" height="700" fill="transparent"></rect><rect width="700" height="700" fill="%23dae08f" filter="url(%23nnnoise-filter)"></rect></svg>');
+  
+  opacity: 1; /* Adjust the opacity as needed */
+}
 @-webkit-keyframes AnimateBG {
   0% {
     background-position: 0% 50%;
