--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,14 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -18,16 +17,14 @@ code {
 }
 .bg-imagineOptions {
   background-color: rgba(68, 172, 90, 0.479);
-  
 }
 .addbutton {
   background-color: rgba(182, 25, 122, 0.479);
-  
 }
 .conteinerWidht {
   width: 90%;
 }
-.conteinerWidht > div:last-child{
+.conteinerWidht > div:last-child {
   position: fixed;
   right: 5%;
   width: 47%;
@@ -35,7 +32,6 @@ code {
 
 .backgroundWhite {
   background-color: rgb(255, 255, 255);
-  
 }
 .zonesButtons > div:first-child {
   margin-left: 0;
@@ -48,11 +44,29 @@ code {
   width: 550px;
 }
 
-.pacientCard {
+/* .pacientCard {
   background-color: #a4ddff;
   box-shadow: 0 10px 16px -4px rgba(0,0,0,0.6);
+  
+  
+} */
+.pacientCard {
+  /* background-color: #a4ddff; */
+  background-color: rgba(22, 101, 129, 0.11);
+  /* background: rgb(164, 221, 255);
+  background: linear-gradient(
+    90deg,
+    rgba(164, 221, 255, 1) 0%,
+    rgb(139, 211, 253) 100%
+    ); */
+    /* background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.dev/svgjs" viewBox="0 0 700 700" width="700" height="700" opacity="1"><defs><filter id="nnnoise-filter" x="-20%" y="-20%" width="140%" height="140%" filterUnits="objectBoundingBox" primitiveUnits="userSpaceOnUse" color-interpolation-filters="linearRGB"><feTurbulence type="fractalNoise" baseFrequency="0.092" numOctaves="4" seed="15" stitchTiles="stitch" x="0%" y="0%" width="100%" height="100%" result="turbulence"></feTurbulence><feSpecularLighting surfaceScale="13" specularConstant="0.9" specularExponent="20" lighting-color="%23%23F08200" x="0%" y="0%" width="100%" height="100%" in="turbulence" result="specularLighting"><feDistantLight azimuth="3" elevation="93"></feDistantLight></feSpecularLighting><feColorMatrix type="saturate" values="0" x="0%" y="0%" width="100%" height="100%" in="specularLighting" result="colormatrix"></feColorMatrix></filter></defs><rect width="700" height="700" fill="%231ae2ec00"></rect><rect width="700" height="700" fill="%23%23F08200" filter="url(%23nnnoise-filter)"></rect></svg>'); */
+
+    backdrop-filter: blur(0.7px); /* Adjust the blur value as needed */
+    box-shadow: 0 10px 16px -4px rgba(0,0,0,0.6);
+
 }
-  .pacientStore {
+
+.pacientStore {
   max-width: 600px;
   background-color: rgb(236, 236, 236);
   /* background-color: rgb(211, 242, 255); */
@@ -62,11 +76,10 @@ code {
 }
 
 .pacientStore > :not(:last-child) {
-  margin-bottom: 16px
+  margin-bottom: 16px;
 }
-.imagineOptions{
+.imagineOptions {
   position: relative;
-
 }
 .overlay {
   position: absolute;
@@ -74,15 +87,14 @@ code {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(78, 228, 48, 0.20); /* Полупрозрачный черный цвет */
+  background: rgba(78, 228, 48, 0.2); /* Полупрозрачный черный цвет */
   pointer-events: auto; /* Это делает элемент активным для кликов */
   z-index: 10; /* Поместите слой выше формы */
-  background-image: url('https://cdn1.iconfinder.com/data/icons/basic-ui-elements-coloricon/21/15-512.png'); /* Замените на путь к вашей картинке */
+  background-image: url("https://cdn1.iconfinder.com/data/icons/basic-ui-elements-coloricon/21/15-512.png"); /* Замените на путь к вашей картинке */
   background-size: contain; /* Масштабирование изображения, чтобы оно занимало всю площадь */
   background-position: center center;
   background-repeat: no-repeat; /* Запрет повторения изображения */
-  border-radius: 8px; 
-  
+  border-radius: 8px;
 }
 
 .form-container {
@@ -90,8 +102,8 @@ code {
   /* z-index: 1; */
 }
 
-.addOption > div:first-child{
-width: 100%;
+.addOption > div:first-child {
+  width: 100%;
 }
 
 .tox {
