bg style change

--- a/src/index.css
+++ b/src/index.css
@@ -164,6 +164,14 @@ code {
 }
 /* -------------------------------------------------------- */
 
+.b1 {
+    padding: 0.5rem 0.5rem;
+    
+  border: 1px solid #e4e4e4;
+  border-radius: 0.5rem;
+  margin-bottom: 1rem;
+
+}
 .addOption > div:first-child {
   width: 100%;
 }
@@ -172,22 +180,32 @@ code {
   position: fixed;
 }
 .itemZones {
-  padding: 0.5rem 0.5rem;
+  /* padding: 0.5rem 0.5rem; */
+  /* margin-bottom: 1rem; */
+  display: flex;
+  flex-direction:row;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  /* border: 1px solid #c0c0c0;
+  border-radius: 0.5rem; */
+}
+.optionAddBlock {
+  /* padding: 0.5rem 0.5rem; */
   margin-bottom: 1rem;
   display: flex;
-  flex-direction: row;
+  align-items: center;
+  flex-direction:row;
   justify-content: space-between;
-  align-items: flex-end;
-  position: relative;
-  border: 1px solid #c0c0c0;
-  border-radius: 0.5rem;
+  /* position: relative; */
 }
 
 .zoneAddButton {
   display: flex;
-  flex-direction: row;
+  /* flex-direction: row; */
   margin-left: 1rem;
-  margin-bottom: 1rem;
+
+  /* margin-bottom: 1rem; */
 }
 
 .banner {
