--- a/src/App.css
+++ b/src/App.css
@@ -4,35 +4,25 @@ table#tableid {
    background-color: transparent; 
 }
 body {
-   /* background-image: url(https://img.freepik.com/free-vector/gradient-blur-pink-blue-abstract-background_53876-117324.jpg?w=1380&t=st=1701093583~exp=1701094183~hmac=2f93a5fd5ddef6589c479dbdcbd2e8a22adb2a9af8706a374ecbd56721c87781);
-   background-repeat: no-repeat;
-   background-position: center;
-   background-size: cover; */
 
-   /* width: 100%;
-  height: 100vh; */
-  /* display: flex; */
-  align-items: center;
+  /* --------------------- */
+  /* align-items: center;
   justify-content: center;
   background-size: 300% 300%;
   background-image: linear-gradient(-45deg, rgb(0, 225, 255) 0%, rgb(0, 225, 255) 25%, rgb(0, 225, 255) 51%, #ff3557 100%);
   -webkit-animation: AnimateBG 30s ease infinite;
-          animation: AnimateBG 30s ease infinite;
-}
-body::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  /* background-image: url(https://grainy-gradients.vercel.app/noise.svg); */
-  background-image: url('./svg/nnnoise.svg');
-  /* background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.dev/svgjs" viewBox="0 0 700 700" width="700" height="700" opacity="1"><defs><filter id="nnnoise-filter" x="-20%" y="-20%" width="140%" height="140%" filterUnits="objectBoundingBox" primitiveUnits="userSpaceOnUse" color-interpolation-filters="linearRGB"><feTurbulence type="fractalNoise" baseFrequency="0.2" numOctaves="4" seed="15" stitchTiles="stitch" x="0%" y="0%" width="100%" height="100%" result="turbulence"></feTurbulence><feSpecularLighting surfaceScale="13" specularConstant="0.8" specularExponent="20" lighting-color="%23dae08f" x="0%" y="0%" width="100%" height="100%" in="turbulence" result="specularLighting"><feDistantLight azimuth="3" elevation="131"></feDistantLight></feSpecularLighting><feColorMatrix type="saturate" values="0" x="0%" y="0%" width="100%" height="100%" in="specularLighting" result="colormatrix"></feColorMatrix></filter></defs><rect width="700" height="700" fill="transparent"></rect><rect width="700" height="700" fill="%23dae08f" filter="url(%23nnnoise-filter)"></rect></svg>'); */
-  
-  opacity: 1; /* Adjust the opacity as needed */
-}
-@-webkit-keyframes AnimateBG {
+          animation: AnimateBG 30s ease infinite; */
+          /* ------------ */
+          /* background: rgb(0,142,255); */
+          /* background: radial-gradient(circle, rgb(211, 99, 207) 0%, rgb(69, 168, 248) 100%); */
+
+          background: linear-gradient(90deg, rgb(34, 100, 153) 0%, rgb(153, 68, 150) 100%);
+
+                  
+        }
+
+
+/* @-webkit-keyframes AnimateBG {
   0% {
     background-position: 0% 50%;
   }
@@ -54,4 +44,20 @@ body::before {
   100% {
     background-position: 0% 50%;
   }
+} */
+
+/* body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('./svg/nnnoise.svg');
+  opacity: 1; 
+} */
+#root {
+ 
+    background-image: url('./svg/nnnoise.svg');
+    
 }
