--- a/src/index.css
+++ b/src/index.css
@@ -165,12 +165,14 @@ code {
 /* -------------------------------------------------------- */
 
 .b1 {
-    padding: 0.5rem 0.5rem;
-    
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0.5rem 0.5rem;
+
   border: 1px solid #e4e4e4;
   border-radius: 0.5rem;
   margin-bottom: 1rem;
-
 }
 .addOption > div:first-child {
   width: 100%;
@@ -183,7 +185,7 @@ code {
   /* padding: 0.5rem 0.5rem; */
   /* margin-bottom: 1rem; */
   display: flex;
-  flex-direction:row;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   position: relative;
@@ -195,7 +197,7 @@ code {
   margin-bottom: 1rem;
   display: flex;
   align-items: center;
-  flex-direction:row;
+  flex-direction: row;
   justify-content: space-between;
   /* position: relative; */
 }
