add new flex style and fix background

--- a/src/App.css
+++ b/src/App.css
@@ -54,10 +54,10 @@ body {
   width: 100%;
   height: 100%;
   background-image: url('./svg/nnnoise.svg');
-  opacity: 1; 
+  
 } */
-#root {
+/* #root {
  
     background-image: url('./svg/nnnoise.svg');
     
-}
+} */
