--- a/src/index.css
+++ b/src/index.css
@@ -260,20 +260,70 @@ code {
   flex-direction: column;
   align-items: center;
   /* background-image: url('./svg/nnnoise.svg'); */
-  
 }
 
 .content p {
   margin: 0;
+  margin-bottom: 5px;
   font-size: 12px;
   text-align: center;
 }
 
-.content img {
+.content a,img {
   width: 50px;
   height: auto;
-  margin-top: 5px;
+  margin: 5px 0;
   border-radius: 25px;
+}
+
+.logo {
+  position: relative;
+
+}
+
+.logo::after {
+  content: '';
+  position: absolute;
+  /* background-image: url(/src/img/telegram_qr.jpg); */
+  background-size: cover;
+  border-radius: 8px;
+  opacity: 0;
+  transition: opacity .5s ease 0s;
+
+}
+.telegram-logo::after {
+  background-image: url(/src/img/telegram_qr.jpg);
+
+}
+.mono-logo::after {
+  background-image: url(/src/img/mono_qr.jpg);
+
+}
+.privat-logo::after {
+  background-image: url(/src/img/privat_qr.jpg);
+
+}
+.logo:hover::after {
+  opacity: 1;
+  top: -80px;
+  left: 150%;
+  /* box-shadow: 0 10px 16px -4px rgba(0, 0, 0, 0.6); */
+  box-shadow: 0px 0px 20px 6px rgba(0, 0, 0, 0.6);
+}
+
+.privat-logo:hover::after {
+  height: 300px;
+  width: 300px;
+  border: 1px solid;
+  border-color: gray;
+  }
+.mono-logo:hover::after {
+  height: 300px;
+  width: 350px;
+  }
+.telegram-logo:hover::after {
+  height: 300px;
+  width: 250px;
 }
 
 button {
@@ -298,3 +348,6 @@ button:focus {
 .hidden {
   display: none;
 }
+
+
+
