--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,13 @@ code {
 } */
 .conteinerWidht {
   min-height: 100vh;
-  background-image: url('./svg/nnnoise.svg');
+  /* background-image: url('./svg/nnnoise.svg'); */
+  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.dev/svgjs" viewBox="0 0 2000 2000" width="2000" height="2000" opacity="1"><defs><filter id="nnnoise-filter" x="-20%" y="-20%" width="140%" height="140%" filterUnits="objectBoundingBox" primitiveUnits="userSpaceOnUse" color-interpolation-filters="linearRGB"><feTurbulence type="fractalNoise" baseFrequency="0.192" numOctaves="4" seed="15" stitchTiles="stitch" x="0%" y="0%" width="100%" height="100%" result="turbulence"></feTurbulence><feSpecularLighting surfaceScale="18" specularConstant="1.4" specularExponent="20" lighting-color="%23f8e71c" x="0%" y="0%" width="100%" height="100%" in="turbulence" result="specularLighting"><feDistantLight azimuth="3" elevation="87"></feDistantLight></feSpecularLighting></filter></defs><rect width="2000" height="2000" fill="%231d41d100"></rect><rect width="2000" height="2000" fill="%23f8e71c" filter="url(%23nnnoise-filter)"></rect></svg>');
+}
+@media (max-width: 768px) {
+  .conteinerWidht {
+    background-image: none;
+  }
 }
 /* .conteinerWidht::before {
   content: "";
@@ -242,7 +248,8 @@ code {
 }
 .allChildrenMarginY * {
   margin-top: 0.5rem;
-  margin-bottom: 0.5rem;}
+  margin-bottom: 0.5rem;
+}
 
 .banner {
   width: 90px;
@@ -278,7 +285,8 @@ code {
   text-align: center;
 }
 
-.content a,img {
+.content a,
+img {
   width: 50px;
   height: auto;
   margin: 5px 0;
@@ -287,30 +295,25 @@ code {
 
 .logo {
   position: relative;
-
 }
 
 .logo::after {
-  content: '';
+  content: "";
   position: absolute;
   /* background-image: url(/src/img/telegram_qr.jpg); */
   background-size: cover;
   border-radius: 8px;
   opacity: 0;
-  transition: opacity .5s ease 0s;
-
+  transition: opacity 0.5s ease 0s;
 }
 .telegram-logo::after {
   background-image: url(/src/img/telegram_qr.jpg);
-
 }
 .mono-logo::after {
   background-image: url(/src/img/mono_qr.jpg);
-
 }
 .privat-logo::after {
   background-image: url(/src/img/privat_qr.jpg);
-
 }
 .logo:hover::after {
   opacity: 1;
@@ -325,11 +328,11 @@ code {
   width: 300px;
   border: 1px solid;
   border-color: gray;
-  }
+}
 .mono-logo:hover::after {
   height: 300px;
   width: 350px;
-  }
+}
 .telegram-logo:hover::after {
   height: 300px;
   width: 250px;
@@ -349,7 +352,6 @@ button:focus {
 
 #closeBanner {
   align-self: flex-end;
-
 }
 #closeBanner:hover {
   color: rgb(255, 51, 0);
@@ -357,6 +359,3 @@ button:focus {
 .hidden {
   display: none;
 }
-
-
-
