--- a/src/index.css
+++ b/src/index.css
@@ -32,8 +32,7 @@ code {
 } */
 .conteinerWidht {
   min-height: 100vh;
-  /* background-image: url('./svg/nnnoise.svg'); */
-  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.dev/svgjs" viewBox="0 0 2000 2000" width="2000" height="2000" opacity="1"><defs><filter id="nnnoise-filter" x="-20%" y="-20%" width="140%" height="140%" filterUnits="objectBoundingBox" primitiveUnits="userSpaceOnUse" color-interpolation-filters="linearRGB"><feTurbulence type="fractalNoise" baseFrequency="0.192" numOctaves="4" seed="15" stitchTiles="stitch" x="0%" y="0%" width="100%" height="100%" result="turbulence"></feTurbulence><feSpecularLighting surfaceScale="18" specularConstant="1.4" specularExponent="20" lighting-color="%23f8e71c" x="0%" y="0%" width="100%" height="100%" in="turbulence" result="specularLighting"><feDistantLight azimuth="3" elevation="87"></feDistantLight></feSpecularLighting></filter></defs><rect width="2000" height="2000" fill="%231d41d100"></rect><rect width="2000" height="2000" fill="%23f8e71c" filter="url(%23nnnoise-filter)"></rect></svg>');
+  background-image: url('./svg/nnnoise.svg');
 }
 @media (max-width: 768px) {
   .conteinerWidht {
