--- a/src/index.css
+++ b/src/index.css
@@ -116,6 +116,10 @@ code {
 .pacientStore > :not(:last-child) {
   margin-bottom: 16px;
 }
+.fw400{
+  font-weight: 400;
+}
+
 .form-select {
   font-weight: 400;
   font-family:  -apple-system, BlinkMacSystemFont, "Segoe UI",
