--- a/src/tineContent.css
+++ b/src/tineContent.css
@@ -1,7 +1,7 @@
-/* 
+/*
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe ui", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   line-height: 1.4;
   margin: 1rem;
